--- a/SrtL/SrtL.tex
+++ b/SrtL/SrtL.tex
@@ -11,6 +11,16 @@
 \title{SrtL Specification \\ \textbf{S}yntax \textbf{R}ule \textbf{T}esting \textbf{L}anguage}
 \author{Paw W. K. Møller}
 
+\hypersetup
+{
+    pdftitle={SrtL Specification - Syntax Rule Testing Language},
+    pdfsubject={Specification of SrtL},
+    pdfkeywords={SrtL; Specification}
+    pdfauthor={Paw W. K. Møller},
+    bookmarksnumbered={true},
+    pdfhighlight={/N}
+}
+
 \titlespacing\section{0pt}{12pt plus 4pt minus 2pt}{-8pt plus 2pt minus 2pt}
 \titlespacing\subsection{0pt}{12pt plus 4pt minus 2pt}{-8pt plus 2pt minus 2pt}
 \titlespacing\subsubsection{0pt}{12pt plus 4pt minus 2pt}{-8pt plus 2pt minus 2pt}
