--- a/SrtL/SrtL.tex
+++ b/SrtL/SrtL.tex
@@ -104,6 +104,9 @@
     \input{Conformance.tex}
     \clearpage
     
+    \subsection{File Extension}
+    \input{FileExtension.tex}
+    
     \subsection{Source Encoding}
     \input{SourceEncoding.tex}
     
