--- a/SrtL/ExcludingRules.tex
+++ b/SrtL/ExcludingRules.tex
@@ -1,7 +1,7 @@
 \lstinputlisting[style=Ebnf, firstline=24, lastline=25]{SrtL.ebnf}
 
 If there are more rules that should be included than rules that should be
-excluded from the test use the \textbf{exclude rules} keywords followed by a 
+excluded from the test use the \textbf{exclude} keyword followed by a 
 \textit{string list} of rule names. The rules mentioned in that list are ignored
 in that specific test. If one or more rules referenced in the 
 \textit{string list} doesn't exist in a syntax, an error must be issued.
