--- a/SrtL/IncludingRules.tex
+++ b/SrtL/IncludingRules.tex
@@ -1,7 +1,7 @@
 \lstinputlisting[style=Ebnf, firstline=21, lastline=22]{SrtL.ebnf}
 
 If there are many more rules that should be ignored in a test than there are
-rules that should be used, you can use the \textbf{include rules} keywords
+rules that should be used, you can use the \textbf{include} keyword
 followed by a \textit{string list} of rule names. The rules mentioned in that 
 list are the rules that are used throughout the test. If one or more rules 
 referenced in the \textit{string list} doesn't exist in a syntax, an error must
