--- a/SrtL/Strings.tex
+++ b/SrtL/Strings.tex
@@ -1,4 +1,4 @@
-\lstinputlisting[style=Ebnf, firstline=37, lastline=58]{SrtL.ebnf}
+\lstinputlisting[style=Ebnf, firstline=33, lastline=57]{SrtL.ebnf}
 
 Strings are used to represent data such as rule names and test input. Strings 
 consists of zero or more characters enclosed in double quotes, as in "hello", 
@@ -46,7 +46,5 @@ Is equal to
 "Abc def"
 \end{lstlisting}
 
-The \textit{concatenated string list} represents a list of possibly 
-concatenated strings. The comma character separates each string. 
-\textit{string list} works the same way as \textit{concatenated string list} 
-but, without the support for concatenation.
+The \textit{string list} represents a list of strings. The comma character 
+separates each string. \textit{string list} has no support for concatenation.
